# g-algorithm

./: .gitignore  Config.hs  Dna.hs  Evaluator.hs  Evolver.hs  Main.hs  Mutator.hs  Test.hs  Utils.hs  g-algorithm.cabal  in.txt  run.bat
src/: Config.hs  Dna.hs  Evolver.hs  Gene.hs  Memory.hs  Mutator.hs  Processor.hs  Program.hs  Scoring.hs  Test.hs  Utils.hs  VM.hs
