name:                g-algorithm
version:             0.1.0.0
license:             PublicDomain
author:              Pradd
maintainer:          pradd.me@gmail.com
build-type:          Simple
cabal-version:       >=1.8

executable g-algorithm
  main-is:             Main.hs
  build-depends:       base ==4.5.*
